--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,32 @@
-attrs==22.1.0
-bytecode==0.13.0
-caldav==0.9.1
-certifi==2022.6.15
-cffi==1.15.1
-charset-normalizer==2.1.0
-cryptography==38.0.1
-ddsketch==2.0.4
-isdayoff==1.0
-ddtrace==1.3.2
-htpasswd==2.3
-idna==3.2
-lxml==4.9.1
-orderedmultidict==1.0.1
-packaging==21.3
-protobuf==4.21.4
-pycparser==2.21
-pyOpenSSL==22.1.0
-pyparsing==3.0.9
-pyTelegramBotAPI==4.6.0
-python-dateutil==2.8.2
-python-dotenv==0.21.0
-pytz==2022.2.1
-pytz-deprecation-shim==0.1.0.post0
-requests==2.28.1
-schedule==1.1.0
-six==1.16.0
-tenacity==8.0.1
-tzdata==2022.2
-tzlocal==4.2
-urllib3==1.26.9
-vobject==0.9.6.1
+attrs
+bytecode
+caldav
+certifi
+cffi
+charset-normalizer
+cryptography
+ddsketch
+isdayoff
+ddtrace
+htpasswd
+idna
+lxml
+orderedmultidict
+packaging
+protobuf
+pycparser
+pyOpenSSL
+pyparsing
+pyTelegramBotAPI
+python-dateutil
+python-dotenv
+pytz
+pytz-deprecation-shim
+requests
+schedule
+six
+tenacity
+tzdata
+tzlocal
+urllib3
+vobject
