--- a/requirements.txt
+++ b/requirements.txt
@@ -51,7 +51,7 @@ six==1.16.0
 sniffio==1.3.0
 starlette==0.27.0
 tenacity==8.2.3
-typing_extensions==4.7.1
+typing_extensions
 tzdata==2023.3
 tzlocal==5.0.1
 urllib3==2.0.4
