--- a/requirements.txt
+++ b/requirements.txt
@@ -1,64 +1,64 @@
-aiohttp==3.7.4.post0
-annotated-types==0.5.0
-anyio==3.7.1
-async-timeout==3.0.1
-attrs==21.2.0
-bytecode==0.14.2
-caldav==1.3.6
-cattrs==23.1.1
-certifi==2023.7.22
-cffi==1.15.1
-chardet==4.0.0
-charset-normalizer==3.2.0
-click==8.1.7
-cryptography==41.0.3
-ddsketch==2.0.4
-ddtrace==1.18.3
-Deprecated==1.2.14
-envier==0.4.0
-exceptiongroup==1.1.3
-fastapi==0.103.0
-h11==0.14.0
-htpasswd==2.3
-icalendar==5.0.7
-idna==3.2
-idna-ssl==1.1.0
-importlib-metadata==6.8.0
-isdayoff==1.0
-lxml==4.9.3
-multidict==5.1.0
-numpy==1.25.2
-opentelemetry-api==1.19.0
-orderedmultidict==1.0.1
-packaging==23.1
-pandas==2.1.0
-protobuf==4.24.2
-pycparser==2.21
-pydantic==2.3.0
-pydantic_core==2.6.3
-pyOpenSSL==23.2.0
-pyparsing==3.1.1
-pyTelegramBotAPI==4.13.0
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-python-multipart==0.0.6
-pytz==2023.3
-pytz-deprecation-shim==0.1.0.post0
-recurring-ical-events==2.0.2
-requests==2.31.0
-schedule==1.2.0
-six==1.16.0
-sniffio==1.3.0
-starlette==0.27.0
-tenacity==8.2.3
+aiohttp
+annotated-types
+anyio
+async-timeout
+attrs
+bytecode
+caldav
+cattrs
+certifi
+cffi
+chardet
+charset-normalizer
+click
+cryptography
+ddsketch
+ddtrace
+Deprecated
+envier
+exceptiongroup
+fastapi
+h11
+htpasswd
+icalendar
+idna
+idna-ssl
+importlib-metadata
+isdayoff
+lxml
+multidict
+numpy
+opentelemetry-api
+orderedmultidict
+packaging
+pandas
+protobuf
+pycparser
+pydantic
+pydantic_core
+pyOpenSSL
+pyparsing
+pyTelegramBotAPI
+python-dateutil
+python-dotenv
+python-multipart
+pytz
+pytz-deprecation-shim
+recurring-ical-events
+requests
+schedule
+six
+sniffio
+starlette
+tenacity
 typing_extensions
-tzdata==2023.3
-tzlocal==5.0.1
-urllib3==2.0.4
-uvicorn==0.23.2
-vobject==0.9.6.1
-wrapt==1.15.0
-x-wr-timezone==0.0.5
-xmltodict==0.13.0
-yarl==1.6.3
-zipp==3.16.2
+tzdata
+tzlocal
+urllib3
+uvicorn
+vobject
+wrapt
+x-wr-timezone
+xmltodict
+yarl
+zipp
